<resources>
    <string name="app_name">RecipeApp</string>
    <string name="welcome">Welcome,</string>
    <string name="tocontinue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_member">New member?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_started">Get Started,</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="already_a_member">Already a member?</string>
    <string name="forgotten_text">Enter your email address and we would<br />send you a link to reset your password</string>
    <string name="forgotten">Forgotten<br />your password?</string>
    <string name="send_email">Send Email</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="add">Add</string>
    <string name="checkemail">Check your E-mail</string>
    <string name="wehavesend">We have send your a reset password<br />link on your registered e-mail address.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_view">image view</string>
    <string name="hello">Hello,</string>
    <string name="make_your_own_food">Make your own food</string>
    <string name="stay_at">Stay at</string>
    <string name="search_any_recipe">Search any recipe</string>
    <string name="popular">Popular</string>
    <string name="western">Western</string>
    <string name="dessert">Dessert</string>
    <string name="drinks">Drinks</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="potato_salad">Potato Salad</string>
    <string name="feta_omelette">Feta Omelette</string>
    <string name="asian">Asian</string>
    <string name="green_curry">Green Curry</string>
    <string name="vegan_laksa">Vegan Laksa</string>
</resources>